Service button spacing fixed

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -9,7 +9,7 @@ $breakpoint-xl: 1200px;
 $main-color: #25B1DA;
 $white: #EDEDED;
 $gray: #2E2E2E;
-$bg-color: #fff;
+$bg-color: #2E2E2E;
 
 // Fonts //
 $font-family-header: 'Expletus Sans', cursive;
